Fixed padding issue on blog page that was allowing horizontal scrolling on mobile. There's a far better canvas example now. Some header and footer border color adjustments. Blog font text is larger. Blog text itself is updated to match the example.

--- a/less/portfolio.less
+++ b/less/portfolio.less
@@ -9,7 +9,9 @@ body {
 #header {
   width: 100%;
   // background-color: #ccc;
-  padding-top: 30px;
+  // padding-top: 30px;
+  padding: 30px 0;
+  border-bottom: 1px solid #eaeaea;
 
   #headerTitle {
     // margin: 30px 0;
@@ -94,6 +96,7 @@ body {
 
 #introduction {
   margin: 140px 0;
+  margin-top: 110px;
   color: #666;
   font-size: 200%;
 
@@ -104,11 +107,12 @@ body {
 @media (min-width: 768px) {
   #introduction {
     margin: 180px 0;
+    margin-top: 150px;
   }
 }
 
 .mainContainer {
-  width: 90%;
+  width: 86%;
   margin: 0 auto;
   // transition: width 0.6s ease-out 0s;
 }
@@ -305,8 +309,9 @@ body {
 
 #footer {
   height: 130px;
-  // background-color: #333;
-  border-top: 1px solid #999;
+
+  // border-top: 1px solid #999;
+  border-top: 1px solid #d1d1d1;
   font-size: 114%;
 
   margin-top: 180px;
@@ -509,13 +514,13 @@ h2 {
   transition: none;
   // min-width: 700px;
   // width: auto;
-  max-width: 650px;
-  padding: 0 25px;
-  margin-top: 80px;
+  max-width: 700px;
+  // padding: 0 25px;
+  // margin-top: 80px;
 }
 
 #firstBlog {
-  font-size: 129%;
+  font-size: 150%;
   // margin-top: 50px;
   // width: 70%;
   // margin: 0 auto;
@@ -646,8 +651,9 @@ h3 {
 }
 
 #blog h1 {
-  // width: 70%;
-  margin: 20px 0 80px;
+  // margin: 65px 0 -15px;
+  font-size: 2.1em;
+  margin: 80px 0 15px;
 }
 
 .red {
